--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
+    <color name="bluedark">#2f333f</color>
+    <color name="white">#FFFFFF</color>
+    <color name="green">#76D87A</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
