--- a/app/src/main/res/layout/custompopup.xml
+++ b/app/src/main/res/layout/custompopup.xml
@@ -29,6 +29,7 @@
         android:background="@drawable/cerclebackground"
         android:gravity="center"
         android:text="X"
+        android:onClick="stopSound"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
