--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
+        android:onClick="playSound"
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
         android:src="@mipmap/ic_launcher" />
@@ -22,6 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/imageIcon"
+        android:onClick="playSound"
         android:ellipsize="marquee"
         android:text="Description"
         android:textColor="@color/green"
@@ -36,6 +38,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
+        android:textColorLink="@color/green"
         android:layout_toRightOf="@id/imageIcon"
         android:gravity="center_vertical"
         android:text="Example application"
